1. phone-icon hover fixed 2. header-box color fixed 3. smooth hover transition added 4. correct font added to textareas 5. mailto added to footer 6. fixed header image on small screens

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -17,9 +17,46 @@
     }
   }
 
+  &__input {
+    width: 100%;
+    height: 48px;
+    margin-bottom: 16px;
+    padding-left: $placeholder-padding;
+    border-radius: 40px;
+    color: $theme-color;
+
+    background-color: $contacts-input-color;
+  }
+
+  &__input-area {
+    height: 148px;
+    margin-bottom: 32px;
+    padding-top: 14px;
+    padding-left: $placeholder-padding;
+    border-radius: 16px;
+    color: $theme-color;
+
+    background-color: #fff;
+  }
+
   &__input,
   &__input-area {
     grid-column: 1 / -1;
+
+    font-family: inherit;
+    box-sizing: border-box;
+
+    outline: none;
+    border: 1px solid transparent;
+    transition: border-color $effectDuration ease;
+
+    &:hover {
+      border-color: #D5D7DE;
+    }
+
+    &:focus {
+      border-color: #292929;
+    }
   }
 
   &__button {
@@ -94,33 +131,5 @@
       grid-column: 9;
       width: 100%;
     }
-  }
-
-  &__input {
-    box-sizing: border-box;
-    width: 100%;
-    height: 48px;
-    margin-bottom: 16px;
-    padding-left: $placeholder-padding;
-    border: none;
-    border-radius: 40px;
-
-    color: $theme-color;
-
-    background-color: $contacts-input-color;
-  }
-
-  &__input-area {
-    box-sizing: border-box;
-    height: 148px;
-    margin-bottom: 32px;
-    padding-top: 14px;
-    padding-left: $placeholder-padding;
-    border: none;
-    border-radius: 16px;
-
-    color: $theme-color;
-
-    background-color: #fff;
   }
 }
