--- a/src/styles/blocks/details.scss
+++ b/src/styles/blocks/details.scss
@@ -67,30 +67,24 @@
 
 .button {
   display: block;
-
   width: 100%;
   max-width: 280px;
   height: 56px;
   margin: 0 auto;
   border: none;
   border-radius: 40px;
-
   background-color: $main-text-color;
 
-  &::after {
-    box-shadow: 1px 4px 16px 0 #e8e8f0a3;
-  }
+  transition: box-shadow $effectDuration ease;
 
-  &:hover {
+  &:hover,
+  &:focus {
     box-shadow: 1px 4px 16px 0 #e8e8f066;
   }
-
   &__text {
     display: block;
-
     margin: 0;
     padding: 14px 0;
-
     font-size: 16px;
     line-height: 27px;
     color: $theme-color;
