--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,7 +1,8 @@
 /* #region header */
 
 .header {
-  background-image: url(/src/images/svg/header-bg-mobile.svg);
+  height: 100vh;
+  background-image: url(/src/images/header-bg-mobile.png);
 
   @include on-tablet {
     background-image: url(/src/images/header-bg-desktop.png);
@@ -20,7 +21,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
   }
 
   &__text {
