--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -34,4 +34,31 @@
   }
 }
 
+.icon-phone-container {
+  position: relative;
+  display: inline-block;
+
+  .icon--phone-icon {
+    position: absolute;
+    right: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    white-space: nowrap;
+
+    display: none;
+    margin-right: 8px;
+    color: $main-text-color;
+    text-decoration: none;
+
+    @include on-tablet {
+      font-size: 18px;
+    }
+  }
+
+  .icon--phone:hover + .icon--phone-icon {
+    display: inline;
+  }
+}
+
+
 /* #endregion */
