--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,17 +14,14 @@
 
   &__top {
     position: sticky;
+    background-color: #c2c2c2;
     z-index: 1;
     top: 0;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
-
     margin-bottom: 32px;
     padding-left: 20px;
-
-    background-color: #e5e5e5;
 
     @include on-tablet {
       margin-bottom: 0;
