--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,3 +5,5 @@ $theme-color: #1d1d1d;
 $main-text-color: #fff;
 $contacts-input-color: #f8f8fa;
 $placeholder-padding: 16px;
+$input-hover-border: 1px solid #D5D7DE;
+$input-focus-border: 1px solid #292929;
